--- a/HTFLMS/Views/Home/Index.cshtml
+++ b/HTFLMS/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-        <img src="~/img/hero-bg.jpg" alt="" data-aos="fade-in">
+        <img src="~/img/careerBg.png" alt="" data-aos="fade-in">
 
         <div class="container">
             <h2 data-aos="fade-up" data-aos-delay="100">Learning Today,<br>Leading Tomorrow</h2>
