views and color theme

--- a/HTFLMS/Views/Shared/_Layout.cshtml
+++ b/HTFLMS/Views/Shared/_Layout.cshtml
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Index - Mentor Bootstrap Template</title>
+    <title>HCC LMS</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
 
     <!-- Favicons -->
-    <link href="~/img/favicon.png" rel="icon">
-    <link href="~/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link rel="icon" type="image/png" href="~/img/fav.png">
+    <link rel="apple-touch-icon" href="~/img/fav.png">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
