--- a/HTFLMS/Views/Shared/_Layout.cshtml
+++ b/HTFLMS/Views/Shared/_Layout.cshtml
@@ -38,15 +38,14 @@
     <header id="header" class="header d-flex align-items-center sticky-top">
         <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-            <a href="index.html" class="logo d-flex align-items-center me-auto">
-                <!-- Uncomment the line below if you also wish to use an image logo -->
-                <!-- <img src="assets/img/logo.webp" alt=""> -->
+            <a asp-controller="Home" asp-action="Index"
+               class="logo d-flex align-items-center me-auto">
                 <img src="~/img/hcc_logo(1).png" alt="HCC Logo" style="height:40px;">
             </a>
 
             <nav id="navmenu" class="navmenu">
                 <ul>
-                    <li><a asp-controller="Home" asp-action="HomeIndex">Home</a></li>
+                    <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                     <li>
                         <a asp-controller="About" asp-action="AboutIndex">About</a>
                     </li>
