--- a/HTFLMS/Views/Shared/_Layout.cshtml
+++ b/HTFLMS/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
 
             <nav id="navmenu" class="navmenu">
                 <ul>
-                    <li><a asp-controller="Home" asp-action="HomeIndex">Home</a></li>
+                    <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                     <li>
                         <a asp-controller="About" asp-action="AboutIndex">About</a>
                     </li>
