Pages bg and navbar change

--- a/HTFLMS/Views/Home/Index.cshtml
+++ b/HTFLMS/Views/Home/Index.cshtml
@@ -31,15 +31,14 @@
                 </div>
 
                 <div class="col-lg-6 order-2 order-lg-1 content" data-aos="fade-up" data-aos-delay="200">
-                    <h3>Voluptatem dignissimos provident quasi corporis</h3>
+                    <h3>HCC Mission and Overview</h3>
                     <p class="fst-italic">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua.
+                        To help clients reach their potential through smart, customized consulting and technology solutions that fuel innovation and growth.
                     </p>
                     <ul>
-                        <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                        <li><i class="bi bi-check-circle"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                        <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
+                        <li><i class="bi bi-check-circle"></i> <span>HCC started in 2000 as the technology consulting arm of Crowe Pakistan—one of the country’s oldest accountancy firms. Since then, we have evolved into a dynamic digital solutions company, blending deep expertise in finance and technology.</span></li>
+                        <li><i class="bi bi-check-circle"></i> <span>Today, we deliver industry-focused, award-winning digital solutions that drive business innovation and create real impact.</span></li>
+                        <li><i class="bi bi-check-circle"></i> <span>At HCC, we view technology as a business essential. Our team helps clients stay ahead with advanced tools, strategies, and tech-driven thinking.</span></li>
                     </ul>
                     <a href="#" class="read-more"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
                 </div>
