--- a/HTFLMS/Views/About/AboutIndex.cshtml
+++ b/HTFLMS/Views/About/AboutIndex.cshtml
@@ -5,7 +5,7 @@
 <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title" data-aos="fade">
+    <div class="page-title page-title-about" data-aos="fade">
         <div class="heading">
             <div class="container">
                 <div class="row d-flex justify-content-center text-center">
@@ -16,14 +16,14 @@
                 </div>
             </div>
         </div>
-        <nav class="breadcrumbs">
+        @* <nav class="breadcrumbs">
             <div class="container">
                 <ol>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Home</a></li>
                     <li class="current">About Us<br></li>
                 </ol>
             </div>
-        </nav>
+        </nav> *@
     </div><!-- End Page Title -->
     <!-- About Us Section -->
     <section id="about-us" class="section about-us">
