--- a/HTFLMS/Views/Contact/ContactIndex.cshtml
+++ b/HTFLMS/Views/Contact/ContactIndex.cshtml
@@ -5,7 +5,7 @@
 <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title" data-aos="fade">
+    <div class="page-title page-title-contact" data-aos="fade">
         <div class="heading">
             <div class="container">
                 <div class="row d-flex justify-content-center text-center">
@@ -16,14 +16,14 @@
                 </div>
             </div>
         </div>
-        <nav class="breadcrumbs">
+        @* <nav class="breadcrumbs">
             <div class="container">
                 <ol>
                     <li><a href="index.html">Home</a></li>
                     <li class="current">Contact</li>
                 </ol>
             </div>
-        </nav>
+        </nav> *@
     </div><!-- End Page Title -->
     <!-- Contact Section -->
     <section id="contact" class="contact section">
